k8s-manifests/pihole/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.local.tenciolabs.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: default-headers

  tls:
    secretName: local-cert-tls
